commit only after message processed